--- a/requirements2.txt
+++ b/requirements2.txt
@@ -1,8 +1,8 @@
-numpy~=1.25.1
-torch==1.7.1
+numpy~=1.20.0
+torch==1.9.0
 tensorboard==2.3.0
 gitpython
 scipy==1.5.2
 protobuf==3.20.0
-
+setuptools==59.5.0
 pyconll~=3.2.0
